# enlightenment

./: .arcconfig  .gitignore  .mailmap  AUTHORS  COPYING  ChangeLog  HELP-WANTED  INSTALL  Makefile.am  NEWS  README  README.md  README.wayland  TODO  TODO.md  autogen.sh  configure.ac  e19_workdir_setup.sh  enlightenment.pc.in  enlightenment.spec.in  meson.build  meson_dist.mk  meson_options.txt  netwm.txt  xdebug.sh
config/: Makefile.mk  meson.build
config/default/: Makefile.am  Makefile.mk  e.src  e_bindings.src  meson.build  profile.desktop
config/mobile/: Makefile.am  Makefile.mk  e.src  e_bindings.src  meson.build  profile.desktop
config/standard/: Makefile.am  Makefile.mk  e.src  e_bindings.src  meson.build  module.fileman.src  profile.desktop
config/tiling/: Makefile.mk  e.src  e_bindings.src  meson.build  module.tiling.src  profile.desktop
data/backgrounds/: Brown_Rock_Hi.edj  Colorful_Roses.edj  Curly_Leaves.edj  Darkconcrete.edj  Flower_Petals.edj  Go_Away.edj  Green_Stem.edj  Hills.edj  Japanesemaple.edj  Lakegrass.edj  Lantern_Cluster.edj  Leafy_Red.edj  Light.edj  Makefile.mk  Mossstring.edj  Motleyrock.edj  Newgrowth.edj  Ocean_Beach.edj  Orange_Roses.edj  Paper-Flower.edj  Pine_Silhouettes.edj  Purple_Flower_Bunch.edj  Ramen.edj  Shady_Leaves.edj  Skywall.edj  Squiggle-Dark.edj  Squiggle-Light.edj  Squiggle-Mid.edj  Stringflower.edj  Temple.edj  Train.edj  Wall_Lanterns.edj  Wetgrass.edj  Wetleaf.edj  Whiterock.edj  Windy_Palm.edj  meson.build
data/config/: meson.build
data/config/default/: e.src  e_bindings.src  meson.build  profile.desktop
data/config/mobile/: meson.build
data/config/standard/: e.src  e_bindings.src  meson.build  profile.desktop
data/config/tiling/: e.src  e_bindings.src  meson.build  profile.desktop
data/etc/: Makefile.mk  meson.build  sysactions.conf.in  system.conf
data/icons/: Makefile.mk  meson.build
data/input_methods/: Makefile.mk  fcitx.imc  gcin.imc  hime.imc  ibus.imc  meson.build
data/session/: Makefile.mk  enlightenment.desktop.in  meson.build
data/session/wl/: enlightenment.desktop.in  meson.build
data/session/x/: enlightenment.desktop.in  meson.build
data/units/: Makefile.am  Makefile.mk  e18.service  e18.service.in  enlightenment.service.in  meson.build
data/xsession/: Makefile.mk  enlightenment.desktop.in  meson.build
po/: LINGUAS  Makefile.mk  POTFILES-UPDATE.sh  POTFILES.in  POTFILES.skip  ar.po  bg.po  ca.po  complete.sh  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  fi.po  fo.po  fr.po  fr_CH.po  gl.po  he.po  hr.po  hu.po  it.po  ja.po  ka.po  km.po  ko.po  ku.po  lt.po  meson.build  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+9 more)
src/modules/: Makefile.am  Makefile.mk  Makefile_access.am  Makefile_access.mk  Makefile_appmenu.am  Makefile_appmenu.mk  Makefile_atspi_accessibility.mk  Makefile_backlight.am  Makefile_backlight.mk  Makefile_battery.am  Makefile_battery.mk  Makefile_bluez4.am  Makefile_bluez4.mk  Makefile_bryce_migration.mk  Makefile_clock.am  Makefile_clock.mk  Makefile_comp.am  Makefile_conf.am  Makefile_conf.mk  Makefile_conf2.am  Makefile_conf2.mk  Makefile_conf_applications.am  Makefile_conf_applications.mk  Makefile_conf_bindings.am  Makefile_conf_bindings.mk  Makefile_conf_comp.am  Makefile_conf_comp.mk  Makefile_conf_dialogs.am  Makefile_conf_dialogs.mk  Makefile_conf_display.am  Makefile_conf_display.mk  Makefile_conf_interaction.am  Makefile_conf_interaction.mk  Makefile_conf_intl.am  Makefile_conf_intl.mk  Makefile_conf_menus.am  Makefile_conf_menus.mk  Makefile_conf_paths.am  Makefile_conf_paths.mk  Makefile_conf_performance.am  (+114 more)
src/modules/access/: e_mod_config.c  e_mod_main.c  module.desktop.in
src/modules/appmenu/: e-module-appmenu.edj  e_mod_appmenu_private.h  e_mod_appmenu_render.c  e_mod_dbus_registrar_server.c  e_mod_main.c  meson.build  module.desktop  module.desktop.in
src/modules/atspi_accessibility/: e_a11y_zone.c  e_a11y_zone.h  e_atspi_object.c  e_atspi_object.eo.c  e_atspi_object.eo.h  e_atspi_object.h  e_mod_main.c
src/modules/backlight/: e-module-backlight.edj  e_mod_main.c  meson.build  module.desktop  module.desktop.in
src/modules/battery/: .e_mod_main.c.swp  batget.c  e-module-battery.edj  e_mod_config.c  e_mod_main.c  e_mod_main.h  e_mod_openbsd.c  e_mod_sysctl.c  e_mod_udev.c  e_mod_upower.c  meson.build  module.desktop.in
src/modules/bluez4/: agent.c  agent.h  e-module-bluez4.edj  e_mod_main.c  e_mod_main.h  ebluez4.c  ebluez4.h  meson.build  module.desktop  module.desktop.in
src/modules/bluez5/: bz.c  bz.h  bz_agent.c  bz_obj.c  e-module-bluez5.edj  e_mod_agent.c  e_mod_main.c  e_mod_main.h  e_mod_popup.c  e_mod_util.c  meson.build  module.desktop
src/modules/bryce_migration/: config_migration.c  e_mod_main.c  module.desktop.in
src/modules/clock/: config_descriptor.c  config_descriptor.h  e-module-clock.edj  e_mod_config.c  e_mod_main.c  e_mod_main.h  meson.build  module.desktop.in
src/modules/comp/: e_mod_main.c
src/modules/conf/: e-module-conf.edj  e_conf.c  e_mod_config.c  e_mod_main.c  e_mod_main.h  meson.build  module.desktop  module.desktop.in
src/modules/conf2/: .gitignore  e-module-conf2.edc  e_conf2.c  e_mod_main.c  e_mod_main.h  module.desktop.in
src/modules/conf_applications/: e-module-conf_applications.edj  e_int_config_apps.c  e_int_config_apps_personal.c  e_int_config_defapps.c  e_int_config_deskenv.c  e_mod_main.c  e_mod_main.h  meson.build  module.desktop  module.desktop.in
src/modules/conf_bindings/: e-module-conf_bindings.edj  e_int_config_acpibindings.c  e_int_config_edgebindings.c  e_int_config_keybindings.c  e_int_config_mousebindings.c  e_int_config_signalbindings.c  e_int_config_swipebindings.c  e_mod_main.c  e_mod_main.h  meson.build  module.desktop  module.desktop.in
src/modules/conf_comp/: e_mod_config.c  e_mod_config_match.c  e_mod_main.c  e_mod_main.h  module.desktop.in
src/modules/conf_dialogs/: e-module-conf_dialogs.edj  e_int_config_dialogs.c  e_int_config_profiles.c  e_mod_main.c  e_mod_main.h  meson.build  module.desktop.in
src/modules/conf_display/: e_mod_main.c  (+12 more)
(+840 files in other folders)
